# callable_traits

./: CMakeLists.txt  README.md  gen_callable_traits_tests.py
cmake/: callable_traits-config.cmake.in
examples/: callable_traits_example.cpp  example_utils.hpp  function_traits.cpp
include/: callable_traits.hpp
test/: callable_traits_test.cpp  callable_traits_test_helper.hpp  callable_traits_tests.cpp  callable_traits_utils.hpp  gen_callable_traits_tests.py
